--- a/src/index.css
+++ b/src/index.css
@@ -66,7 +66,7 @@
   }
 
   .section-padding {
-    @apply py-24 md:py-32 px-4 sm:px-6 lg:px-8;
+    @apply py-14 sm:py-20 md:py-24 px-4 sm:px-6 lg:px-8;
   }
 
   .container-custom {
